<resources>
	<string name="app_name">Contacts</string>
	<string name="content_desc_avatar_image">Avatar image</string>
	<string name="content_desc_save_contact">Save contact</string>
	<string name="name">Name</string>
	<string name="surname">Surname</string>
	<string name="e_mail">E-mail</string>
	<string name="new_contact">New contact</string>
	<string name="err_invalid_name">Invalid name</string>
	<string name="err_invalid_email">Invalid email</string>
</resources>