<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>

	<agency.tango.android.avatarview.views.AvatarView
		android:id="@+id/avatarView"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="10dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		tools:src="@drawable/ic_launcher_background"
		android:contentDescription="@string/content_desc_avatar_image"
		/>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/nameLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="14dp"
		android:hint="@string/name"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/avatarView"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/name"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textPersonName"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/surnameLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/surname"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/nameLayout"
		android:layout_marginTop="@dimen/margin_between_input_layout"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/surname"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textPersonName"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.textfield.TextInputLayout
		android:id="@+id/emailLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:hint="@string/e_mail"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/surnameLayout"
		android:layout_marginTop="@dimen/margin_between_input_layout"
		>
		<com.google.android.material.textfield.TextInputEditText
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:inputType="textEmailAddress"
			/>
	</com.google.android.material.textfield.TextInputLayout>

	<com.google.android.material.floatingactionbutton.FloatingActionButton
		android:id="@+id/save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:tint="@android:color/white"
		android:src="@drawable/ic_check"
		android:contentDescription="@string/content_desc_save_contact"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>